// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render with selected 1`] = `
<div
  class="tss-1a4ev5x-toggle"
>
  <span
    class="tss-1ynmaeh-label tss-1j4fmvj-closed"
  >
    somelabel
  </span>
  <span
    class="tss-guvefl-selected"
  >
    Some, Thing, Selected
  </span>
</div>
`;

exports[`<Toggle /> should render with selected as open 1`] = `
<div
  class="tss-1a4ev5x-toggle"
>
  <span
    class="tss-1ynmaeh-label tss-1tsp0up-open"
  >
    somelabel
  </span>
  <span
    class="tss-guvefl-selected"
  >
    Some, Thing, Selected
  </span>
</div>
`;

exports[`<Toggle /> should render without selected 1`] = `
<div
  class="tss-1a4ev5x-toggle"
>
  <span
    class="tss-1ynmaeh-label tss-1j4fmvj-closed"
  >
    somelabel
  </span>
</div>
`;

exports[`<Toggle /> should render without selected as open 1`] = `
<div
  class="tss-1a4ev5x-toggle"
>
  <span
    class="tss-1ynmaeh-label tss-1tsp0up-open"
  >
    somelabel
  </span>
</div>
`;
